Addresses Issue #68: Fixes glyphicon icon not showing in chrome

--- a/arsnova.click/client/css/memberlist.scss
+++ b/arsnova.click/client/css/memberlist.scss
@@ -75,6 +75,12 @@
     background-color: rebeccapurple;
     color: white;
     margin: 20px 0px 0px 0px;
+    font-size: 17px;
+
+    .glyphicon-align-justify {
+        /* Fix vertical alignment */
+        top: 3px;
+    }
 }
 
 .learner-list {
